:tada: working demo login page and logout button
