# api.yaml
@@ -77,7 +77,7 @@ paths:
                             description: Authorization token to be used for future requests
                             schema:
                                 type: string
-                                example: token=<token>; Path=/; HttpOnly;
+                                example: token=<token>; Path=/; HttpOnly; SameSite=Strict; MaxAge=3600;
                     content:
                         application/json:
                             schema:
@@ -172,7 +172,7 @@ paths:
                                     type: string
                                     example: A URL to a photo for the listing
             security:
-                - bearerAuth: []
+                - cookieAuth: []
             responses:
                 '201':
                     description: 'Successful Listing'
@@ -216,6 +216,47 @@ paths:
                                         success: 0
                                         message: 'Error parsing JSON.'
                                         error: 1
+    /me:
+        get:
+            summary: Me
+            description: Checks authentication status for given user.
+            security:
+                - cookieAuth: []
+            responses:
+                '200':
+                    description: 'Successfully Authenticated'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    email:
+                                        type: string
+                                        example: 'email@example.com'
+                                    username:
+                                        type: string
+                                        example: 'exampleUser'
+                '401':
+                    description: 'Unauthorized'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+    /logout:
+        get:
+            summary: Logout
+            description: Destroys session cookie and logs the current user out.
+            security:
+                - cookieAuth: []
+            responses:
+                '200':
+                    description: 'Logout'
+                    headers:
+                        Set-Cookie:
+                            description: Destroyed authorization cookie
+                            schema:
+                                type: string
+                                example: token=; Path=/; HttpOnly; SameSite=Strict; MaxAge=-1;
 
 components:
     schemas:
@@ -237,3 +278,8 @@ components:
                     enum:
                         - 0
                         - 1
+    securitySchemes:
+        cookieAuth:
+            type: apiKey
+            in: cookie
+            name: token
